[form-builder] PTE: fix list spacing

--- a/packages/@sanity/form-builder/src/inputs/PortableText/PortableTextInput.css
+++ b/packages/@sanity/form-builder/src/inputs/PortableText/PortableTextInput.css
@@ -226,6 +226,12 @@
       margin-top: 0;
     }
   }
+
+  /* space between different types of lists */
+  @nest & > div > div[class~='pt-list-item-bullet'] + div[class~='pt-list-item-number'],
+    & > div > div[class~='pt-list-item-number'] + div[class~='pt-list-item-bullet'] {
+    margin-top: var(--medium-padding);
+  }
 }
 
 .blockExtras {
