--- a/packages/@sanity/form-builder/src/inputs/PortableText/Text/Paragraph.css
+++ b/packages/@sanity/form-builder/src/inputs/PortableText/Text/Paragraph.css
@@ -3,4 +3,8 @@
 .root {
   composes: paragraph from 'part:@sanity/base/theme/typography/text-blocks-style';
   text-transform: none;
+
+  @nest div[class~='pt-list-item-inner'] > & {
+    margin: 0;
+  }
 }
